--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
   },
